2022-07-21 Se agrega formulario edit a OT.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -7134,6 +7134,7 @@
     <Content Include="Views\IT_inventory_items_genericos\Index.cshtml" />
     <Content Include="Views\IT_inventory_items_genericos\Enable.cshtml" />
     <Content Include="Views\IT_inventory_items_genericos\Disable.cshtml" />
+    <Content Include="Views\OrdenesTrabajo\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
