--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -305,6 +305,8 @@
     <Compile Include="Controllers\IT_inventory_softwareController.cs" />
     <Compile Include="Controllers\IT_inventory_tipos_accesoriosController.cs" />
     <Compile Include="Controllers\IT_mantenimientosController.cs" />
+    <Compile Include="Controllers\IT_mantenimientos_checklist_categoriasController.cs" />
+    <Compile Include="Controllers\IT_mantenimientos_checklist_itemController.cs" />
     <Compile Include="Controllers\IT_matriz_requerimientosController.cs" />
     <Compile Include="Controllers\IT_software_tipoController.cs" />
     <Compile Include="Controllers\IT_solicitud_usuariosController.cs" />
@@ -568,6 +570,8 @@
     <Compile Include="Models\MetadataModels\IT_inventory_cellular_plansMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_inventory_tipos_accesoriosMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_mantenimientosMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_mantenimientos_checklist_categoriasMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_mantenimientos_checklist_itemMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_software_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\class_v3Metadata.cs" />
     <Compile Include="Models\MetadataModels\currencyMetadata.cs" />
@@ -659,7 +663,9 @@
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Paginacion.cs" />
+    <Compile Include="Models\PDFHandlers\FooterEventHandlerPDF_IT_Mantenimiento.cs" />
     <Compile Include="Models\PDFHandlers\FooterEventHandlerPDF_Responsiva.cs" />
+    <Compile Include="Models\PDFHandlers\HeaderEventHandlerPDF_Responsiva_IT_Mantenimiento.cs" />
     <Compile Include="Models\PDFHandlers\HeaderEventHandlerPDF_Responsiva.cs" />
     <Compile Include="Models\PFA.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
@@ -7153,6 +7159,19 @@
     <Content Include="Views\IT_mantenimientos\Edit.cshtml" />
     <Content Include="Views\IT_mantenimientos\Index.cshtml" />
     <Content Include="Views\IT_mantenimientos\CerrarMantenimiento.cshtml" />
+    <Content Include="Views\IT_mantenimientos\CargarDocumento.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_categorias\Create.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_categorias\Details.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_categorias\Disable.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_categorias\Edit.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_categorias\Enable.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_categorias\Index.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_item\Create.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_item\Details.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_item\Disable.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_item\Edit.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_item\Enable.cshtml" />
+    <Content Include="Views\IT_mantenimientos_checklist_item\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
