2022-09-01 Se agrega pantalla para editar comentarios de asignaciones IT.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -7143,6 +7143,7 @@
     <Content Include="Views\OT_zona_falla\Enable.cshtml" />
     <Content Include="Views\OT_zona_falla\Index.cshtml" />
     <Content Include="Views\OrdenesTrabajo\SolicitudesDepartamento.cshtml" />
+    <Content Include="Views\IT_asignacion_hardware\EditarResponsiva.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
