--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -105,15 +105,15 @@
 	<connectionStrings>
 		<!--Productivo NUEVO-->
 		<!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
-		<!--
 		<add name="DefaultConnection" connectionString="Server=10.122.161.232\productivo; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		-->
-		<!--Productivo PRUEBAS (copia de la BD actual de Productivo)-->
+		<add name="cube_tkmmConnection" connectionString="Server=10.122.161.232\productivo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+ 		<!--Productivo PRUEBAS (copia de la BD actual de Productivo)-->		
 		<!--
 		<add name="DefaultConnection" connectionString="Server=10.122.161.232\desarrollo; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\desarrollo;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		-->
+		<add name="cube_tkmmConnection" connectionString="Server=10.122.161.232\desarrollo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    	-->
 		<!--Productivo OLD -->
 		<!--
 		<add name="DefaultConnection" connectionString="Server=192.168.10.156; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
@@ -121,8 +121,10 @@
 		-->
 		<!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
 		<!--Desarrollo-->		
+		<!--
 		<add name="DefaultConnection" connectionString="Server=192.168.10.156\dwtkmm; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156\dwtkmm;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		
+		<add name="cube_tkmmConnection" connectionString="Server=192.168.10.156\dwtkmm; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+		-->
 	</connectionStrings>
 </configuration>
