--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -63,8 +63,10 @@
     <Compile Include="Util\BgPlantillaUtil.cs" />
     <Compile Include="Util\BG_Status.cs" />
     <Compile Include="Util\DocumentosProcesos.cs" />
+    <Compile Include="Util\GV_solicitud_estatus.cs" />
+    <Compile Include="Util\GV_tipo_departamento.cs" />
     <Compile Include="Util\IT_matenimiento_Estatus.cs" />
-	  <Compile Include="Util\GV_tipo_viaje.cs" />
+    <Compile Include="Util\GV_tipo_viaje.cs" />
     <Compile Include="Util\IT_MR_Status.cs" />
     <Compile Include="Util\IT_solicitud_usuario_Status.cs" />
     <Compile Include="Util\IT_Tipos_Hardware.cs" />
